# TestSetupDiscussion

./: .gitignore  CMakeLists.txt  README.md
ExampleLibrary/: CMakeLists.txt  Dependency1.cpp  Dependency2.cpp  Dependency3.cpp  Dependency4.cpp  ExampleClass.cpp  ExampleProgram.cpp
ExampleLibrary/Includes/Example/: Dependency1.h  Dependency2.h  Dependency3.h  Dependency4.h  ExampleClass.h  IDependency1.h  IDependency2.h  IDependency3.h  IDependency4.h
TestExampleLibrary/: CMakeLists.txt  TestExampleClass_Approach1.cpp  TestExampleClass_Approach2.cpp  TestExampleClass_Approach3.cpp  TestExampleRunner.cpp
TestExampleLibrary/Mocks/: mockDependency1.h  mockDependency2.h  mockDependency3.h  mockDependency4.h
